--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Arcadius Group",
-  "name": "Website Arcadius Group",
+  "short_name": "Renan Schmitt",
+  "name": "Website Renan Schmitt",
   "icons": [
     {
       "src": "favicon.ico",
